--- a/css/styles.css
+++ b/css/styles.css
@@ -599,7 +599,7 @@ button {
 
 @media screen and (min-width:768px) {
 .portfolio-list {
-       column-gap: 10px;
+       column-gap: 24px;
        row-gap: 72px;
 }
 }
@@ -801,3 +801,416 @@ button {
         width: 264px;
     }
 }
+
+@media screen and (min-width:1158px) {
+    .page-footer {
+            padding: 100px 0;
+    }
+
+    .footer-wrapper {
+            padding-left: 0;
+    }
+    
+    .footer-main {
+            margin-right: 120px;
+    }
+
+    .soc-media-box {
+        margin-right: 80px;
+    }
+    .footer-main {
+            margin-bottom: 0;
+    }
+    .soc-media-box {
+            margin-bottom: 0;
+    }
+}
+
+/* Modal */
+@media screen and (min-width:320px) {
+.backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(46, 47, 66, 0.4);
+
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .backdrop.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        width: 288px;
+        min-height: 623px;
+        max-height: 80%;
+
+        padding-top: 72px;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-bottom: 24px;
+
+        transform: translate(-50%, -50%);
+
+        background-color: #fcfcfc;
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+            0 1px 3px 0 rgba(0, 0, 0, 0.12),
+            0 2px 1px 0 rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .backdrop:not(.is-open) .modal {
+        transform: translate(-50%, -50%) scale(1.5);
+    }
+
+    .modal-title {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+    }
+
+    .icon-close {
+        fill: #2e2f42;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .form-label {
+        display: block;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        margin-bottom: 4px;
+
+    }
+
+    .form-input {
+        width: 100%;
+        height: 40px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        padding-left: 38px;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #2E2F42;
+        background-color: transparent;
+        outline: transparent;
+
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    }
+
+    .button-close {
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        background-color: #e7e9fc;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        cursor: pointer;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .button-close:hover,
+    .button-close:focus {
+        border: none;
+        background-color: #404bbf;
+    }
+
+    .button-close:hover .icon-close {
+        fill: #ffffff;
+    }
+
+    .button-close:focus .icon-close {
+        fill: #ffffff;
+    }
+
+    .modal-title {
+        margin-bottom: 16px;
+    }
+
+    .form-input-box {
+        position: relative;
+    }
+
+    .form-icon {
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        transform: translateY(-50%);
+
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    }
+
+    .form-input:focus {
+        border-color: #4d5ae5;
+        outline: none;
+    }
+
+    .form-input:focus+.form-icon {
+        fill: #4d5ae5;
+    }
+
+    .form-input-comment {
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        width: 100%;
+        height: 120px;
+        padding: 8px 16px;
+        resize: none;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+        background-color: transparent;
+        outline: transparent;
+
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .form-input-comment::placeholder {
+        color: rgba(46, 47, 66, 0.4);
+    }
+
+    .form-input-comment:focus {
+        border-color: #4d5ae5;
+        outline: none;
+    }
+
+    .form-button {
+        font-family: inherit;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+        background-color: #4d5ae5;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        cursor: pointer;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
+        margin-left: auto;
+        margin-right: auto;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .form-button:focus,
+    .form-button:hover {
+        background-color: #404bbf;
+    }
+
+    .form-custom-checkbox {
+        display: inline-flex;
+        flex-shrink: 0;
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        fill: transparent;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        margin-right: 8px;
+    }
+
+    .form-checkbox:checked+.form-checkbox-label>.form-custom-checkbox {
+        background-color: #404bbf;
+        border: none;
+        fill: #f4f4fd;
+    }
+
+    .form-checkbox-label {
+        display: flex;
+        align-items: center;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+    }
+
+    .form-privacy-policy {
+        text-decoration: underline;
+        color: #4d5ae5;
+    }
+
+    .form-wrapper-checkbox {
+        margin-bottom: 24px;
+    }
+
+    .form-wrapper-comment {
+        margin-bottom: 16px;
+    }
+
+    .form-wrapper {
+        margin-bottom: 8px;
+    }
+}
+
+@media screen and (min-width:768px){
+    .modal {
+    
+            width: 408px;
+            min-height: 584px;
+    
+            
+            padding-left: 24px;
+            padding-right: 24px;
+
+        }
+}
+
+/* Mobile menu */
+
+.menu-mobile {
+    width: 100%;
+    height: 100%;
+    padding: 72px 16px 40px 16px;
+
+    position: absolute;
+        top: 50%;
+        left: 50%;
+    
+        transform: translate(-50%, -50%);
+    
+        background-color: #fcfcfc;
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+            0 1px 3px 0 rgba(0, 0, 0, 0.12),
+            0 2px 1px 0 rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+    
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-nav-link{
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11111;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
+
+.mob-menu-contacts-link {
+    font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #434455;
+}
+
+.mob-color {
+    color: #404bbf;
+}
+
+.mobile-nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 168px;
+}
+
+.mob-menu-contacts-list {
+    display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-bottom: 48px;
+}
+
+.mob-icon {
+    width: 40px;
+    height: 40px;
+}
+
+.mob-icon-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-icon-list {
+    display: flex;
+    gap: 40px;
+}
+
+ .button-close-mobile {
+     position: absolute;
+     top: 24px;
+     right: 24px;
+     width: 24px;
+     height: 24px;
+     border-radius: 50%;
+     background-color: #ffffff;
+     border: 1px solid rgba(0, 0, 0, 0.1);
+
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: 0;
+     cursor: pointer;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .backdrop-mobile-menu {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background-color: rgba(46, 47, 66, 0.4);
+
+     opacity: 0;
+     visibility: hidden;
+     pointer-events: none;
+
+     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .backdrop-mobile-menu.is-open {
+     opacity: 1;
+     visibility: visible;
+     pointer-events: auto;
+ }
+
+ .backdrop-mobile-menu:not(.is-open) .menu-mobile {
+     transform: translate(-50%, -50%) scale(1.5);
+ }
