--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ button {
     align-items: center;
     justify-content: space-between;
 }
+
 .nav-list,
 .contacts {
     display: none;
@@ -91,11 +92,11 @@ button {
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
 }
 
 .header-logo {
@@ -127,99 +128,102 @@ button {
         display: none;
     }
 
-        .header-logo {
-            padding: 24px 0;
-            margin-right: 120px;
-        }
-       
+    .header-logo {
+        padding: 24px 0;
+        margin-right: 120px;
+    }
+
     .nav-list {
-            display: flex;
-            align-items: center;
-            gap: 40px;
-        }
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
 
     .nav-link {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-            color: #2e2f42;
-            padding: 24px 0;
-            display: block;
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        
-    
-    .header-nav {
-            display: flex;
-            align-items: center;
-        }
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        padding: 24px 0;
+        display: block;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-                
-        
+
+    .header-nav {
+        display: flex;
+        align-items: center;
+    }
+
+
+
     .nav-link:hover,
     .nav-link:focus,
     .contacts-link:hover,
     .contacts-link:focus,
     .nav-link.current {
         color: #404bbf;
-                }
-        
+    }
+
     .nav-link.current {
         position: relative;
-                }
-        
+    }
+
     .nav-link.current::after {
         content: "";
-        
+
         position: absolute;
         left: 0;
         bottom: -1px;
-        
+
         width: 100%;
         height: 4px;
-        
+
         background-color: #404bbf;
         border-radius: 2px;
-                }
-        .contacts {
-            font-style: normal;
-            display: block;
-        }
+    }
 
-        .contacts-list {
+    .contacts {
+        font-style: normal;
+        display: block;
+    }
+
+    .contacts-list {
         display: flex;
         flex-direction: column;
         gap: 12px;
-}
-.contacts-link {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #434455;
-    display: block;
+    }
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    .contacts-link {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #434455;
+        display: block;
+
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 @media screen and (min-width:1158px) {
-.header-logo {
-        
+    .header-logo {
+
         margin-right: 76px;
     }
 
-.contacts-list {
-    flex-direction: row;
-    align-items: center;
-    gap: 40px;
-}
-.contacts-link {
-    padding: 24px 0;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em; 
-}
+    .contacts-list {
+        flex-direction: row;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .contacts-link {
+        padding: 24px 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
 }
 
 .hero-section {
@@ -230,7 +234,7 @@ button {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile/hero-mob.jpg);
     max-width: 320px;
     margin: 0 auto;
 }
@@ -263,7 +267,7 @@ button {
     border-radius: 4px;
     margin: auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+
 }
 
 .button:hover,
@@ -271,39 +275,39 @@ button {
     background-color: #404bbf;
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:768px) {
 
-.hero-section {
-        
-    padding: 112px 0;
-    max-width: 768px;
+    .hero-section {
+
+        padding: 112px 0;
+        max-width: 768px;
     }
 
     .hero-section-text {
-    font-size: 56px;
-    line-height: 1.01;
-    max-width: 496px;
-    margin: auto;
-    margin-bottom: 36px;
-    
-}
+        font-size: 56px;
+        line-height: 1.01;
+        max-width: 496px;
+        margin: auto;
+        margin-bottom: 36px;
+
+    }
 
 }
 
 @media screen and (min-width:1158px) {
 
     .hero-section {
-    
-    padding: 188px 0;
-    max-width: 1440px;
-            
+
+        padding: 188px 0;
+        max-width: 1440px;
+
     }
-    
+
     .hero-section-text {
-    margin-bottom: 48px;
-    
+        margin-bottom: 48px;
+
     }
-    
+
 }
 
 .advantages-icon {
@@ -342,23 +346,23 @@ button {
     width: 100%;
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:768px) {
     .advantages {
-            text-align: left;
-        }
-    
+        text-align: left;
+    }
+
     .advantages-list {
-            column-gap:24px; 
-        }
-    
+        column-gap: 24px;
+    }
+
     .advantages-list-item {
-            width: calc((100% - 24px) / 2)
-        }
+        width: calc((100% - 24px) / 2)
+    }
 }
 
 @media screen and (min-width:1158px) {
 
-.advantages-icon {
+    .advantages-icon {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -370,27 +374,28 @@ button {
 
     }
 
-.advantages {
+    .advantages {
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
-}
+    }
 
-.advantages-text {
-    font-weight: 400;
-}
+    .advantages-text {
+        font-weight: 400;
+    }
 
-.advantages-list {
-    flex-wrap: nowrap;
-    gap: 24px;
-}
+    .advantages-list {
+        flex-wrap: nowrap;
+        gap: 24px;
+    }
 
-.advantages-list-item {
-    width: calc((100% - 72px) / 4)
-}
-.advantages-title {
-    padding: 120px 0;
-}
+    .advantages-list-item {
+        width: calc((100% - 72px) / 4)
+    }
+
+    .advantages-title {
+        padding: 120px 0;
+    }
 }
 
 /* Our team */
@@ -410,7 +415,7 @@ button {
     display: flex;
     row-gap: 72px;
     flex-wrap: wrap;
-    
+
 }
 
 .team {
@@ -488,7 +493,7 @@ button {
 }
 
 @media screen and (min-width:768px) {
-.team-member-list {
+    .team-member-list {
         row-gap: 64px;
         column-gap: 24px;
     }
@@ -496,12 +501,13 @@ button {
 
 @media screen and (min-width:1158px) {
     .team {
-            padding-top: 120px;
-            padding-bottom: 120px;
-        }
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+
     .team-member-card {
-    width: calc((100% - 72px) / 4);
-}
+        width: calc((100% - 72px) / 4);
+    }
 }
 
 /* Portfolio */
@@ -598,20 +604,20 @@ button {
 }
 
 @media screen and (min-width:768px) {
-.portfolio-list {
-       column-gap: 24px;
-       row-gap: 72px;
-}
+    .portfolio-list {
+        column-gap: 16px;
+        row-gap: 72px;
+    }
 }
 
-@media screen and (min-width:1158px){
+@media screen and (min-width:1158px) {
     .portfolio-section {
-    padding: 120px 0 120px 0;
-}
-    
+        padding: 120px 0 120px 0;
+    }
+
     .portfolio-list {
-    row-gap: 48px;
-}
+        row-gap: 48px;
+    }
 }
 
 /* footer */
@@ -634,7 +640,7 @@ button {
     margin-bottom: 16px;
     display: flex;
     justify-content: center;
-  
+
 }
 
 .footer-wrapper {
@@ -644,7 +650,7 @@ button {
 }
 
 .footer-main {
-   margin-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 
@@ -666,7 +672,7 @@ button {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
-   text-align: center;
+    text-align: center;
 }
 
 .soc-media-box {
@@ -767,32 +773,32 @@ button {
     border-color: #31D0AA;
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:768px) {
     .page-footer {
-            padding: 96px 0;
-        }
-    
-        .footer-wrapper {
-            padding-left: 108px;
-            justify-content: start;
-        }
-    
-        .footer-text {
-           max-width: 264px;
-        }
+        padding: 96px 0;
+    }
 
-         .soc-media {
-            text-align: start
-        }
-    
-        .footer-logo {
-            display: inline-block;
-        }
-    
-        .footer-main {
-            margin-right: 24px;
-        }
-    
+    .footer-wrapper {
+        padding-left: 108px;
+        justify-content: start;
+    }
+
+    .footer-text {
+        max-width: 264px;
+    }
+
+    .soc-media {
+        text-align: start
+    }
+
+    .footer-logo {
+        display: inline-block;
+    }
+
+    .footer-main {
+        margin-right: 24px;
+    }
+
     .footer-subcribe {
         display: block;
     }
@@ -804,31 +810,33 @@ button {
 
 @media screen and (min-width:1158px) {
     .page-footer {
-            padding: 100px 0;
+        padding: 100px 0;
     }
 
     .footer-wrapper {
-            padding-left: 0;
+        padding-left: 0;
     }
-    
+
     .footer-main {
-            margin-right: 120px;
+        margin-right: 120px;
     }
 
     .soc-media-box {
         margin-right: 80px;
     }
+
     .footer-main {
-            margin-bottom: 0;
+        margin-bottom: 0;
     }
+
     .soc-media-box {
-            margin-bottom: 0;
+        margin-bottom: 0;
     }
 }
 
 /* Modal */
 @media screen and (min-width:320px) {
-.backdrop {
+    .backdrop {
         position: fixed;
         top: 0;
         left: 0;
@@ -1078,17 +1086,17 @@ button {
     }
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:768px) {
     .modal {
-    
-            width: 408px;
-            min-height: 584px;
-    
-            
-            padding-left: 24px;
-            padding-right: 24px;
 
-        }
+        width: 408px;
+        min-height: 584px;
+
+
+        padding-left: 24px;
+        padding-right: 24px;
+
+    }
 }
 
 /* Mobile menu */
@@ -1099,37 +1107,37 @@ button {
     padding: 72px 16px 40px 16px;
 
     position: absolute;
-        top: 50%;
-        left: 50%;
-    
-        transform: translate(-50%, -50%);
-    
-        background-color: #fcfcfc;
-        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
-            0 1px 3px 0 rgba(0, 0, 0, 0.12),
-            0 2px 1px 0 rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
-    
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+
+    background-color: #fcfcfc;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+        0 1px 3px 0 rgba(0, 0, 0, 0.12),
+        0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-nav-link{
+.mobile-nav-link {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11111;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
 .mob-menu-contacts-link {
     font-style: normal;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: #434455;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
 
 .mob-color {
@@ -1145,9 +1153,9 @@ button {
 
 .mob-menu-contacts-list {
     display: flex;
-        flex-direction: column;
-        gap: 24px;
-        margin-bottom: 48px;
+    flex-direction: column;
+    gap: 24px;
+    margin-bottom: 48px;
 }
 
 .mob-icon {
@@ -1171,46 +1179,78 @@ button {
     gap: 40px;
 }
 
- .button-close-mobile {
-     position: absolute;
-     top: 24px;
-     right: 24px;
-     width: 24px;
-     height: 24px;
-     border-radius: 50%;
-     background-color: #ffffff;
-     border: 1px solid rgba(0, 0, 0, 0.1);
+.button-close-mobile {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     padding: 0;
-     cursor: pointer;
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
- .backdrop-mobile-menu {
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     background-color: rgba(46, 47, 66, 0.4);
+.backdrop-mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
 
-     opacity: 0;
-     visibility: hidden;
-     pointer-events: none;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 
-     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
- .backdrop-mobile-menu.is-open {
-     opacity: 1;
-     visibility: visible;
-     pointer-events: auto;
- }
+.backdrop-mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
 
- .backdrop-mobile-menu:not(.is-open) .menu-mobile {
-     transform: translate(-50%, -50%) scale(1.5);
- }
+.backdrop-mobile-menu:not(.is-open) .menu-mobile {
+    transform: translate(-50%, -50%) scale(1.5);
+}
+
+@media screen and (max-width:767px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile/hero-mob@x2.jpg);
+    }
+}
+
+@media screen and (min-width:768px){
+.hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/table/hero-table.jpg);
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width:768px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/table/hero-table@x2.jpg);
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-desktop.jpg);
+        max-width: 1158px;
+    }
+}
+
+@media screen and (min-width:1158px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-desktop@x2.jpg);
+    }
+}
