--- a/css/styles.css
+++ b/css/styles.css
@@ -605,7 +605,7 @@ button {
 
 @media screen and (min-width:768px) {
     .portfolio-list {
-        column-gap: 16px;
+        column-gap: 24px;
         row-gap: 72px;
     }
 }
@@ -696,7 +696,7 @@ button {
 .form-footer-subs {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 16px;
 }
 
 .form-footer-input {
@@ -713,7 +713,6 @@ button {
     outline: none;
     padding: 8px 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    margin-bottom: 16px;
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -799,6 +798,10 @@ button {
         margin-right: 24px;
     }
 
+    .form-footer-subs {
+        gap: 24px;
+        }
+
     .footer-subcribe {
         display: block;
     }
@@ -814,7 +817,7 @@ button {
     }
 
     .footer-wrapper {
-        padding-left: 0;
+        padding-left: 15px;
     }
 
     .footer-main {
@@ -1102,6 +1105,9 @@ button {
 /* Mobile menu */
 
 .menu-mobile {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     padding: 72px 16px 40px 16px;
@@ -1130,6 +1136,12 @@ button {
     color: #2e2f42;
 }
 
+.contacts-box{
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
 .mob-menu-contacts-link {
     font-style: normal;
     font-family: "Roboto", sans-serif;
@@ -1148,14 +1160,12 @@ button {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    margin-bottom: 168px;
 }
 
 .mob-menu-contacts-list {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    margin-bottom: 48px;
 }
 
 .mob-icon {
@@ -1245,7 +1255,7 @@ button {
 @media screen and (min-width:1158px) {
     .hero-section {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-desktop.jpg);
-        max-width: 1158px;
+        max-width: 1440px;
     }
 }
 
